Fix a few layout issues

--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -4,4 +4,5 @@
     margin-right: 0px;
     display: flex;
     flex-direction: column;
+    min-width: 0;
 }
