--- a/src/components/util.css
+++ b/src/components/util.css
@@ -8,6 +8,10 @@
     width: 100%;
 }
 
+a:visited {
+    color: blue;
+}
+
 .text {
     font-size: 14px;
 }
